update view (task)

--- a/tasks/templates/tasks/task_detail.html
+++ b/tasks/templates/tasks/task_detail.html
@@ -6,5 +6,6 @@
 <p>وضعیت: {{ task.status }}</p>
 <p>دسته‌بندی: {{ task.category }}</p>
 <p>تاریخ سررسید: {{ task.due_date }}</p>
+<a href="{% url 'task_update' task.id %}">✏️ ویرایش</a>
 
 {% endblock %}
