--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -14,6 +14,7 @@
             - <a href="{% url 'task_detail' task.pk %}">{{ task.title }}</a>
             - {{ task.due_date }}
             - {{ task.status }}
+            <a href="{% url 'task_update' task.id %}">ویرایش</a>
         </li>
         {% endfor %}
     </ul>
