--- a/tasks/templates/tasks/task_detail.html
+++ b/tasks/templates/tasks/task_detail.html
@@ -1,11 +1,26 @@
 {% extends 'base.html' %}
 
+{% block page-header %}
+    <h1>{{ task.title }}</h1>
+{% endblock page-header %}
+
 {% block content %}
-<h2>{{ task.title }}</h2>
-<p>{{ task.description }}</p>
-<p>وضعیت: {{ task.status }}</p>
-<p>دسته‌بندی: {{ task.category }}</p>
-<p>تاریخ سررسید: {{ task.due_date }}</p>
-<a href="{% url 'task_update' task.id %}">✏️ ویرایش</a>
-<a href="{% url 'task_delete' task.id %}">❌ حذف</a>
+    <!-- Main Content-->
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <!-- Post preview-->
+                <div class="post-preview">
+                    <p>{{ task.description }}</p>
+                    <p>وضعیت: {{ task.status }}</p>
+                    <p>دسته‌بندی: {{ task.category }}</p>
+                    <p>تاریخ سررسید: {{ task.due_date }}</p>
+                    <a href="{% url 'tasks:task_update' task.id %}">✏️ ویرایش</a>
+                    <a href="{% url 'tasks:task_delete' task.id %}">❌ حذف</a>
+                </div>
+                <!-- Divider-->
+                <hr class="my-4" />
+            <br><br><br><br><br><br><br><br><br>
+        </div>
+    </div>
 {% endblock %}
