--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -1,23 +1,31 @@
 {% extends 'base.html' %}
 
-{% block header %}
+{% block header %}{% endblock header %}
 
-{% endblock header %}
+{% block page-header %}
+    <h1>لیست تسک ها</h1>
+    <a href="{% url 'tasks:task_create' %}">ایجاد تسک جدید</a>
+{% endblock page-header %}
 
 {% block content %}
-<center>
-    <a href="{% url 'task_create' %}">+ ایجاد تسک جدید</a>
-    <h2>list tasks</h2>
-    <ul>
-        {% for task in tasks %}
-        <li>
-            - <a href="{% url 'task_detail' task.pk %}">{{ task.title }}</a>
-            - {{ task.due_date }}
-            - {{ task.status }}
-            <a href="{% url 'task_update' task.id %}">ویرایش</a>
-            <a href="{% url 'task_delete' task.id %}">❌</a>
-        </li>
-        {% endfor %}
-    </ul>
-</center>
+
+    <!-- Main Content-->
+<div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-10 col-lg-8 col-xl-7">
+            {% for task in tasks %}
+                <!-- Post preview-->
+                <div class="post-preview">
+                        <h2 class="post-title"><a href="{% url 'tasks:task_detail' task.pk %}">{{ task.title }}</a></h2>
+                    <p class="post-meta">
+                        {{ task.status }}<br>
+                        {{ task.due_date }}
+                    </p>
+                </div>
+                <!-- Divider-->
+                <hr class="my-4" />
+            {% endfor %}
+            <br><br><br><br><br><br><br><br><br>
+    </div>
+</div>
 {% endblock %}
