--- a/tasks/templates/tasks/task_form.html
+++ b/tasks/templates/tasks/task_form.html
@@ -1,32 +1,33 @@
 {% extends 'base.html' %}
 
-
 {% block page-header %}
-    <h1>{% if form.instance.pk %}ویرایش تسک{% else %}ایجاد تسک{% endif %}</h1>
+    <h1 class="text-center my-4">{% if form.instance.pk %}ویرایش تسک{% else %}ایجاد تسک{% endif %}</h1>
 {% endblock page-header %}
 
 {% block content %}
-
-
-    
-    
-    
-
-
-
-
 <main class="mb-4">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="my-5">
-                    <!-- * * SB Forms Contact Form * *-->
-                    <form method="post">
+            <div class="col-md-8 col-lg-6">
+                <div class="card shadow-sm p-4">
+                    <form method="post" class="needs-validation" novalidate>
                         {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit">ذخیره</button>
+                        
+                        {% for field in form %}
+                            <div class="mb-3">
+                                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                                {{ field }}
+                                {% if field.errors %}
+                                    <div class="text-danger small">{{ field.errors.0 }}</div>
+                                {% endif %}
+                            </div>
+                        {% endfor %}
+                        
+                        <div class="d-flex justify-content-between">
+                            <a href="{% url 'tasks:task_list' %}" class="btn btn-primary">بازگشت</a>
+                            <button type="submit" class="btn btn-primary">ذخیره</button>
+                        </div>
                     </form>
-                    <a href="{% url 'tasks:task_list' %}">🔙 بازگشت</a>
                 </div>
             </div>
         </div>
