--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -1,31 +1,36 @@
 {% extends 'base.html' %}
 
-{% block header %}{% endblock header %}
-
 {% block page-header %}
-    <h1>لیست تسک ها</h1>
-    <a href="{% url 'tasks:task_create' %}">ایجاد تسک جدید</a>
+    <div class="d-flex justify-content-between align-items-center my-4">
+        <h1 class="">لیست تسک‌ها</h1>
+        <a href="{% url 'tasks:task_create' %}" class="btn btn-success shadow-sm px-4 py-2">➕ ایجاد تسک جدید</a>
+    </div>
 {% endblock page-header %}
 
 {% block content %}
-
-    <!-- Main Content-->
 <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
-            {% for task in tasks %}
-                <!-- Post preview-->
-                <div class="post-preview">
-                        <h2 class="post-title"><a href="{% url 'tasks:task_detail' task.pk %}">{{ task.title }}</a></h2>
-                    <p class="post-meta">
-                        {{ task.status }}<br>
-                        {{ task.due_date }}
-                    </p>
+            {% if tasks %}
+                {% for task in tasks %}
+                    <div class="card shadow-sm p-3 mb-3 border-0 rounded-3">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h2 class="post-title mb-0">
+                                <a href="{% url 'tasks:task_detail' task.pk %}" class="text-decoration-none text-dark fw-semibold">📄 {{ task.title }}</a>
+                            </h2>
+                            <span class="badge bg-info text-dark">{{ task.status }}</span>
+                        </div>
+                        <p class="post-meta text-muted mt-2 mb-0">
+                            <strong>📅 تاریخ سررسید:</strong> {{ task.due_date }}
+                        </p>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <div class="alert alert-warning text-center" role="alert">
+                    📌 هیچ تسکی وجود ندارد.
                 </div>
-                <!-- Divider-->
-                <hr class="my-4" />
-            {% endfor %}
-            <br><br><br><br><br><br><br><br><br>
+            {% endif %}
+        </div>
     </div>
 </div>
 {% endblock %}
